--- a/src/index.njk
+++ b/src/index.njk
@@ -1,13 +1,16 @@
 ---
 layout: "layouts/front.njk"
-title: Pokaż się z najlepszej strony
+title: Zamów taxi
 description: 
 ---
 
 {% include 'sections/hero.njk' %}
 
-<section class="pt-xlarge pb-xlarge bg-dark-3">
+{% include 'sections/values.njk' %}
 
+{% include 'sections/pricing.njk' %}
+
+<section class="pt-xlarge pb-xlarge bg-dark-3">
 </section>
 
 {% include 'sections/faq.njk' %}
