--- a/public/assets/css/components/button.css
+++ b/public/assets/css/components/button.css
@@ -93,8 +93,13 @@
   transition: all 0.35s cubic-bezier(0.79, 0, 0.07, 0.88);
 }
 
+.button-app {
+  margin-right: 10px;
+}
+
 .button-app img {
-  height: 68px;
+  height: 58px;
+  width: auto;
 }
 
 @keyframes pencilWrite {
