--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4722,7 +4722,7 @@ html.lenis, html.lenis body {
 }
 
 .logo img {
-  max-width: 176px;
+  max-width: 185px;
   height: auto;
 }
 
@@ -4852,7 +4852,7 @@ html.lenis, html.lenis body {
 
 .main-menu li a {
   position: relative;
-  font-size: 6.5vw;
+  font-size: 5.3vw;
   color: var(--color-heading);
   text-decoration: none;
   font-family: var(--font-primary);
@@ -4982,8 +4982,13 @@ html.lenis, html.lenis body {
   transition: all 0.35s cubic-bezier(0.79, 0, 0.07, 0.88);
 }
 
+.button-app {
+  margin-right: 10px;
+}
+
 .button-app img {
-  height: 68px;
+  height: 58px;
+  width: auto;
 }
 
 @keyframes pencilWrite {
