--- a/public/assets/css/base/colors.css
+++ b/public/assets/css/base/colors.css
@@ -1,12 +1,12 @@
 :root, .light {
   --color-accent-1: #2999d6;
-  --color-accent-2: #55bcf4;
+  --color-accent-2: #005999;
   --color-dark-1: #000e23;
   --color-dark-2: #131227;
   --color-dark-3: #000e23;
   --color-light-1: #fdfdfd;
   --color-light-2: #f7f7f7;
-  --color-light-3: #ffffff;
+  --color-light-3: #b6b6b6;
   --color-heading: #11233e;
   --color-text: #47586b;
   --color-border: #74787b87;
