--- a/src/includes/sections/pricing.njk
+++ b/src/includes/sections/pricing.njk
@@ -9,7 +9,7 @@
                     Cennik
                 </h2>
             </div>
-            <div class="row">
+            <div class="row g-4">
                 <div class="col-md-6">
                     <div class="pricing-card rounded-lg shadow-1 p-5">
                         <h2 class="mt-0">
@@ -56,7 +56,62 @@
               </a>
                     </div>
                 </div>
+
+                <div class="col-md-12">
+                    <div class="rounded-lg shadow-1 p-5">
+                        <ul class="pricing-list">
+                            <li>
+                                <span>Czas oczekiwania postoju liczony od momentu rozpoczęcia kursu</span> 
+                                <span>0,85 gr za min/godzina 57 zł</span>
+                            </li>
+                            <div class="line-x mb-4"></div>
+                            <li>
+                                <span>Zakupy do domu wedle regularnego cennika</span> 
+                                <span>+ 20 zł za usługę</span>
+                            </li>
+                            <div class="line-x mb-4"></div>
+                            <li>
+                                Fotelik dodatkowo płatny 10 zł za szt.
+                            </li>
+                            <div class="line-x mb-4"></div>
+                            <li>
+                                Zwierzęta dodatkowo płatne 10 zł
+                            </li>
+                            <div class="line-x mb-4"></div>
+                            <li>
+                                Odpalenie auta dodatkowo płatne 30 zł
+                            </li>
+                            <div class="line-x mb-4"></div>
+                            <li>
+                                Kombi auto do 4 pasażerów + 4 walizki do 20 kg dodatkowo płatny za podstawienie 10 zł
+                            </li>
+                            <div class="line-x mb-4"></div>
+                            <li>
+                                Van auto do 6 pasażerów dodatkowo płatny za podstawienie 20 zł i za każdy kilometr 10% od kwoty za przejechane km z cennika DZIEŃ/NOC
+                            </li>
+                            <div class="line-x mb-4"></div>
+                            <li>
+                                Bus auto do 8 pasażerów dodatkowo płatny za podstawienie 40 zł i za każdy kilometr 15% od kwoty za przejechane km z cennika DZIEŃ/NOC
+                            </li>
+                            <div class="line-x mb-4"></div>
+                            <li>
+                                VIP auto dodatkowo płatny za podstawienie 70 zł i za każdy kilometr 50% od kwoty za przejechane km z cennika DZIEŃ/NOC ( potwierdzane zawsze przez Dyspozytora) 
+                            </li>                   
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
 </section>
+
+<style>
+    .pricing-list {
+        padding-left: 0;
+    }
+    .pricing-list li {
+        margin-bottom: 1.3em;
+        list-style: none;
+    }
+</style>
