--- a/src/index.njk
+++ b/src/index.njk
@@ -10,8 +10,7 @@ description:
 
 {% include 'sections/pricing.njk' %}
 
-<section class="pt-xlarge pb-xlarge bg-dark-3">
-</section>
+{% include 'sections/map.njk' %}
 
 {% include 'sections/faq.njk' %}
 
