--- a/public/assets/css/base/global.css
+++ b/public/assets/css/base/global.css
@@ -32,3 +32,20 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.bt-list li {
+  position: relative;
+  margin-bottom: 0.5em;
+  list-style: none;
+}
+
+.bt-list li::before {
+  position: absolute;
+  content: "";
+  top: 8px;
+  left: -30px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: var(--color-accent-1);
+}
