--- a/src/assets/sass/base/global.scss
+++ b/src/assets/sass/base/global.scss
@@ -36,3 +36,19 @@ a {
   text-decoration: none;
 }
 
+.bt-list li {
+  position: relative;
+  margin-bottom: .5em;
+  list-style: none;
+}
+
+.bt-list li::before {
+   position: absolute;
+   content: "";
+   top: 8px;
+   left: -30px;
+   width: 12px;
+   height: 12px;
+   border-radius: 50%;
+   background: var(--color-accent-1);
+}
