--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -22,6 +22,11 @@
         <p class="small color-light-2 op-7 mb-3">Strona jest własnością firmy Bluu Group SP. Z O.O. z siedzibą w Piasecznie 05-500 ul. Kościuszki 10/1 NIP 1231545527, <br class="d-none d-md-block">która świadczy usługi taksówkowe pod nazwą Bluutaxi.pl </p>
   </div>
 
+  <div>
+    <a href="https://www.facebook.com/profile.php?id=61552516455065" title="Facebook" class="magnetic svg-social-link" data-strength="40" target="_blank" rel="nofollow noopener" style="transform: rotate(0.005deg);"><svg viewBox="0 0 96 96" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="none"><path d="M48 8C25.908 8 8 25.908 8 48C8 68.052 22.772 84.612 42.02 87.504V58.6H32.124V48.084H42.02V41.088C42.02 29.504 47.664 24.42 57.292 24.42C61.904 24.42 64.34 24.76 65.496 24.916V34.092H58.928C54.84 34.092 53.412 37.968 53.412 42.336V48.084H65.392L63.768 58.6H53.416V87.588C72.94 84.944 88 68.248 88 48C88 25.908 70.092 8 48 8Z" fill="var(--color-dark-2)"></path></svg> </a>
+    <a href="https://www.facebook.com/profile.php?id=61552516455065" title="Facebook" class="magnetic svg-social-link" data-strength="40" target="_blank" rel="nofollow noopener" style="transform: rotate(0.005deg);"><svg viewBox="0 0 96 96" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="none"><path d="M48 8C25.908 8 8 25.908 8 48C8 68.052 22.772 84.612 42.02 87.504V58.6H32.124V48.084H42.02V41.088C42.02 29.504 47.664 24.42 57.292 24.42C61.904 24.42 64.34 24.76 65.496 24.916V34.092H58.928C54.84 34.092 53.412 37.968 53.412 42.336V48.084H65.392L63.768 58.6H53.416V87.588C72.94 84.944 88 68.248 88 48C88 25.908 70.092 8 48 8Z" fill="var(--color-dark-2)"></path></svg> </a>
+  </div>
+
 </div>
   </div>
 </footer>
