--- a/src/includes/sections/pricing.njk
+++ b/src/includes/sections/pricing.njk
@@ -1,22 +1,17 @@
 <section class="bg-dark-3">
-    <div class="pt-small pb-small pb-md-medium rounded-xl bg-light-2">
+    <div class="pt-medium pb-small pb-md-medium rounded-xl bg-light-2">
         <div class="container">
-            <div class="text-center pb-xsmall">
-                <p class="mb-2 color-accent-1">
-                    Zobacz
-                </p>
-                <h2 class="h1 mt-0">
-                    Cennik
-                </h2>
-            </div>
             <div class="row g-4">
                 <div class="col-md-6">
-                    <div class="pricing-card rounded-lg shadow-1 p-5">
+                    <div class="pricing-card rounded-lg shadow-1 p-5 bg-light-1">
                         <h2 class="mt-0">
-                            Dzień
+                            Taryfa dzienna
                         </h2>
+                        <p class="mb-2">
+                            W godzinach 6.00-22.00 za podstawienie auta do 4 osób minimalna wynosi: 
+                        </p>
                         <p>
-                            W godzinach 6.00-22.00 za podstawienie auta do 4 osób zawsze minimalna CENA 30 zł w tym 5km + za każdy następny kilometr 4 zł bez stref
+                            30 zł w tym 5km + za każdy następny kilometr 4 zł bez stref
                         </p>
                         <a href="/" title="Zamów przejazd" class="button-anim magnetic fade-in"
                         data-strength="60">
@@ -36,10 +31,13 @@
                 <div class="col-md-6">
                     <div class="pricing-card rounded-lg shadow-1 p-5 bg-dark-3">
                         <h2 class="mt-0 color-light-1">
-                            Noc
+                            Taryfa nocna
                         </h2>
+                        <p class="mb-2 color-light-3">
+                            W godzinach 22.00 – 6.00 za podstawienie auta do 4 osób minimalna cena wynosi: 
+                        </p>
                         <p class="color-light-3">
-                            W godzinach 22.00 – 6.00 za podstawienie auta do 4 osób zawsze minimalna CENA 35 zł w tym 5km + za każdy następny kilometr 5 zł bez stref
+                            35 zł w tym 5km + za każdy następny kilometr 5 zł bez stref
                         </p>
                         <a href="/" title="Zamów przejazd" class="button-anim magnetic fade-in"
                         data-strength="60">
@@ -57,49 +55,58 @@
                     </div>
                 </div>
 
+                <!--
                 <div class="col-md-12">
-                    <div class="rounded-lg shadow-1 p-5">
+                    <div class="rounded-lg shadow-1 p-5 bg-light-1">
                         <ul class="pricing-list">
                             <li>
-                                <span>Czas oczekiwania postoju liczony od momentu rozpoczęcia kursu</span> 
+                                <h3 class="my-0">Czas oczekiwania postoju liczony od momentu rozpoczęcia kursu</h3> 
                                 <span>0,85 gr za min/godzina 57 zł</span>
                             </li>
                             <div class="line-x mb-4"></div>
                             <li>
-                                <span>Zakupy do domu wedle regularnego cennika</span> 
+                                <h3 class="my-0">Zakupy do domu wedle regularnego cennika</h3> 
                                 <span>+ 20 zł za usługę</span>
                             </li>
                             <div class="line-x mb-4"></div>
                             <li>
-                                Fotelik dodatkowo płatny 10 zł za szt.
+                                <h3 class="my-0">Fotelik dla dziecka</h3> 
+                                <span>10 zł za szt.</span>
                             </li>
                             <div class="line-x mb-4"></div>
                             <li>
-                                Zwierzęta dodatkowo płatne 10 zł
+                                <h3 class="my-0">Zwierzęta </h3> 
+                                <span>10 zł</span>
                             </li>
                             <div class="line-x mb-4"></div>
                             <li>
-                                Odpalenie auta dodatkowo płatne 30 zł
+                                <h3 class="my-0">Odpalenie auta </h3> 
+                                <span>30 zł</span>
                             </li>
                             <div class="line-x mb-4"></div>
                             <li>
-                                Kombi auto do 4 pasażerów + 4 walizki do 20 kg dodatkowo płatny za podstawienie 10 zł
+                                <h3 class="my-0">Kombi auto do 4 pasażerów + 4 walizki do 20 kg </h3> 
+                                <span>dodatkowo płatny za podstawienie 10 zł</span>
                             </li>
                             <div class="line-x mb-4"></div>
                             <li>
-                                Van auto do 6 pasażerów dodatkowo płatny za podstawienie 20 zł i za każdy kilometr 10% od kwoty za przejechane km z cennika DZIEŃ/NOC
+                                <h3 class="my-0">Van auto do 6 pasażerów</h3> 
+                                <span>dodatkowo płatny za podstawienie 20 zł i za każdy kilometr 10% od kwoty za przejechane km z cennika DZIEŃ/NOC</span>
                             </li>
                             <div class="line-x mb-4"></div>
                             <li>
-                                Bus auto do 8 pasażerów dodatkowo płatny za podstawienie 40 zł i za każdy kilometr 15% od kwoty za przejechane km z cennika DZIEŃ/NOC
+                                <h3 class="my-0">Bus auto do 8 pasażerów </h3>
+                               <span>dodatkowo płatny za podstawienie 40 zł i za każdy kilometr 15% od kwoty za przejechane km z cennika DZIEŃ/NOC</span> 
                             </li>
                             <div class="line-x mb-4"></div>
                             <li>
-                                VIP auto dodatkowo płatny za podstawienie 70 zł i za każdy kilometr 50% od kwoty za przejechane km z cennika DZIEŃ/NOC ( potwierdzane zawsze przez Dyspozytora) 
+                                <h3 class="my-0">VIP auto </h3> 
+                                <span>dodatkowo płatny za podstawienie 70 zł i za każdy kilometr 50% od kwoty za przejechane km z cennika DZIEŃ/NOC (potwierdzane zawsze przez Dyspozytora)</span> 
                             </li>                   
                         </ul>
                     </div>
                 </div>
+                -->
 
             </div>
         </div>
@@ -112,6 +119,10 @@
     }
     .pricing-list li {
         margin-bottom: 1.3em;
+        padding: .5em 0;
+        display: flex;
+        justify-content: space-between;
         list-style: none;
+        font-size: 120%;
     }
 </style>
