--- a/public/assets/css/base/typography.css
+++ b/public/assets/css/base/typography.css
@@ -133,6 +133,11 @@ h6,
   color: var(--color-text);
 }
 
+.medium {
+  font-size: var(--fs-md);
+  line-height: 1.4;
+}
+
 small,
 .small {
   font-size: var(--fs-sm);
