--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -35,7 +35,7 @@
   .container-md,
   .container-sm,
   .container-xl {
-    max-width: 1160px;
+    max-width: 1060px;
   }
 }
 @media (min-width: 1400px) {
@@ -45,7 +45,7 @@
   .container-sm,
   .container-xl,
   .container-xxl {
-    max-width: 1280px;
+    max-width: 1180px;
   }
 }
 .row {
@@ -4607,6 +4607,11 @@ h6,
   color: var(--color-text);
 }
 
+.medium {
+  font-size: var(--fs-md);
+  line-height: 1.4;
+}
+
 small,
 .small {
   font-size: var(--fs-sm);
@@ -5365,15 +5370,33 @@ html.lenis, html.lenis body {
     bottom: -75%;
   }
 }
-.footer-top {
-  background: url("/assets/img/template/bgr-curved-lines.png");
-  background-size: 100%;
-  background-position: bottom;
-  background-repeat: no-repeat;
+.footer-logo {
+  max-width: 200px;
 }
 
-.footer-bottom {
+.footer-middle {
   border-top: 1px solid rgba(153, 153, 153, 0.2);
+  border-bottom: 1px solid rgba(153, 153, 153, 0.2);
+}
+
+.footer-bottom-menu {
+  padding-left: 0;
+  margin-top: 0;
+}
+
+.footer-bottom-menu li {
+  margin-bottom: 0;
+  margin-right: 1em;
+  display: inline-block;
+  list-style: none;
+}
+
+.btn-footer {
+  margin-right: 0;
+}
+
+.btn-footer img {
+  height: 38px;
 }
 
 .work-image-wrap img {
