--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -1,30 +1,86 @@
 </main>
 
-<footer class="pt-large pb-small bg-dark-3" id="kontakt">
+<footer class="pt-large pb-xxsmall bg-dark-3" id="kontakt">
   <div class="footer-parallax">
     <div class="container">
-  <div class="footer-top col-md-8 mx-auto pb-medium text-center">
-    <h2 class="h1 color-light-1">Pobierz aplikację mobilną</h2>
-    <p class="color-light-1 op-7 mb-0">
-      Pobierz najnowszą aplikację mobilną ze swojego sklepu z aplikacjami – instaluj tylko aplikacje z oryginalnych sklepów.
-      </p>
-    <div class="d-md-flex gap-2 justify-content-center py-4">
-      <a href="https://play.google.com/store/apps/details?id=com.taxity.bluutaxi" title="Pobierz z Google Play" class="button-app magnetic fade-in">
-        <img src="/assets/img/hero/googleplay.png" alt="">
-      </a>
-      <a href="https://apps.apple.com/pl/app/bluu-taxi-piaseczno-pra%C5%BCm%C3%B3w/id6504847568?platform=iphone" title="Pobierz z Appstore" class="button-app magnetic fade-in">
-        <img src="/assets/img/hero/appstore.png" alt="">
-      </a>
+  <div class="footer-top pb-medium">
+      <div class="row">
+        <div class="col-md-3">
+          <img src="/assets/img/logo/logo.png" class="footer-logo" alt="">
+          <p class="small color-light-3 mt-4">
+            Strona jest własnością firmy Bluu Group SP. Z O.O. z siedzibą w Piasecznie 05-500 ul. Kościuszki 10/1 NIP: 1231545527
+          </p>
+        </div>
+        <div class="offset-md-1 col-md-4">
+          <h2 class="h5 mb-4 color-light-1">
+            Potrzebujesz pomocy?
+          </h2>
+          <a href="" class="h3 color-light-1">
+            22 247 20 20
+          </a>
+          <p class="small color-light-3">
+            Cały tydzień: 6.00 - 18.00
+          </p>
+          <a href="" class="h4 color-accent-1">
+            info@bluutaxi.pl
+          </a>
+        </div>
+        <div class="col-md-2">
+          <h2 class="h5 color-light-1">
+            Usługi
+          </h2>
+        </div>
+        <div class="col-md-2">
+          <h2 class="h5 color-light-1">
+            Kontakt
+          </h2>
+        </div>
+      </div>
+  </div>
+
+  <div class="footer-middle">
+    <p class="small color-light-1">
+
+    </p>
+  </div>
+
+  <div class="footer-bottom pt-xsmall">
+    <div class="row">
+      <div class="col-md-8">
+        <ul class="footer-bottom-menu">
+          <li>
+            <a href="#" title="" class="small color-light-1">
+              Polityka prywatności
+            </a>
+          </li>
+          <li>
+            <a href="#" title="" class="small color-light-1">
+              Regulamin
+            </a>
+          </li>
+          <li>
+            <a href="#" title="" class="small color-light-1">
+              RODO
+            </a>
+          </li>
+        </ul>
+        <p class="small color-light-2 op-5 mb-3">2025 Bluuetaxi Wszelkie prawa zastrzeżone</p>
+      </div>
+      <div class="col-md-4">
+        <img src="/assets/img/template/payments.webp" alt="">
+      </div>
+      <div class="col-md-12">
+        <div class="d-md-flex gap-2 align-items-center py-4">
+          <p class="my-0 small color-light-2">Pobierz aplikacje mobilną</p>
+          <a href="https://play.google.com/store/apps/details?id=com.taxity.bluutaxi" title="Pobierz z Google Play" class="button-app btn-footer magnetic">
+            <img src="/assets/img/hero/googleplay.png" alt="">
+          </a>
+          <a href="https://apps.apple.com/pl/app/bluu-taxi-piaseczno-pra%C5%BCm%C3%B3w/id6504847568?platform=iphone" title="Pobierz z Appstore" class="button-app btn-footer magnetic">
+            <img src="/assets/img/hero/appstore.png" alt="">
+          </a>
+        </div>
+      </div>
     </div>
-  </div>
-
-  <div class="footer-bottom pt-xsmall text-center">
-        <p class="small color-light-2 op-7 mb-3">Strona jest własnością firmy Bluu Group SP. Z O.O. z siedzibą w Piasecznie 05-500 ul. Kościuszki 10/1 NIP 1231545527, <br class="d-none d-md-block">która świadczy usługi taksówkowe pod nazwą Bluutaxi.pl </p>
-  </div>
-
-  <div>
-    <a href="https://www.facebook.com/profile.php?id=61552516455065" title="Facebook" class="magnetic svg-social-link" data-strength="40" target="_blank" rel="nofollow noopener" style="transform: rotate(0.005deg);"><svg viewBox="0 0 96 96" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="none"><path d="M48 8C25.908 8 8 25.908 8 48C8 68.052 22.772 84.612 42.02 87.504V58.6H32.124V48.084H42.02V41.088C42.02 29.504 47.664 24.42 57.292 24.42C61.904 24.42 64.34 24.76 65.496 24.916V34.092H58.928C54.84 34.092 53.412 37.968 53.412 42.336V48.084H65.392L63.768 58.6H53.416V87.588C72.94 84.944 88 68.248 88 48C88 25.908 70.092 8 48 8Z" fill="var(--color-dark-2)"></path></svg> </a>
-    <a href="https://www.facebook.com/profile.php?id=61552516455065" title="Facebook" class="magnetic svg-social-link" data-strength="40" target="_blank" rel="nofollow noopener" style="transform: rotate(0.005deg);"><svg viewBox="0 0 96 96" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="none"><path d="M48 8C25.908 8 8 25.908 8 48C8 68.052 22.772 84.612 42.02 87.504V58.6H32.124V48.084H42.02V41.088C42.02 29.504 47.664 24.42 57.292 24.42C61.904 24.42 64.34 24.76 65.496 24.916V34.092H58.928C54.84 34.092 53.412 37.968 53.412 42.336V48.084H65.392L63.768 58.6H53.416V87.588C72.94 84.944 88 68.248 88 48C88 25.908 70.092 8 48 8Z" fill="var(--color-dark-2)"></path></svg> </a>
   </div>
 
 </div>
