--- a/src/includes/partials/header.njk
+++ b/src/includes/partials/header.njk
@@ -30,8 +30,13 @@
 
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | url }}">
     <link rel="stylesheet" href="/static/cookieconsent.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"/>
 
     <style>
+    #map {
+      width: 100%;
+      height: 600px;
+    }
       .preloader {
         display: block;
         position: fixed;
