--- a/src/includes/sections/faq.njk
+++ b/src/includes/sections/faq.njk
@@ -1,14 +1,14 @@
 <section class="bg-dark-3" itemscope itemtype="https://schema.org/FAQPage">
   <div class="pt-small pt-md-medium pb-small pb-md-medium rounded-xl bg-light-2">
     <div class="container">
-        <div class="accordion-wrap w-lg-70 w-xl-60 mx-auto"> 
+        <div class="accordion-wrap col-md-6"> 
             <h2 class="h1 mt-0 mb-5 split-lines">
                 Najczęściej zadawane pytania
             </h2>
             {% for post in collections.faq %}
             <div class="bg-light-1 rounded-md shadow-1 p-2 px-4 p-md-3 px-md-4 my-3 fade-in" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
               <button class="accordion my-3">
-                <span class="h3 title my-0" itemprop="name">
+                <span class="h4 title my-0" itemprop="name">
                   {{ post.data.title }}
                 </span>
                 <span class="icon"></span>
