--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -6,7 +6,7 @@
   <div class="footer-top pb-medium">
       <div class="row">
         <div class="col-md-3">
-          <img src="/assets/img/logo/logo.png" class="footer-logo" alt="">
+          <img src="/assets/img/logo/logo-light.png" class="footer-logo" alt="">
           <p class="small color-light-3 mt-4">
             Strona jest własnością firmy Bluu Group SP. Z O.O. z siedzibą w Piasecznie 05-500 ul. Kościuszki 10/1 NIP: 1231545527
           </p>
