--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -15,20 +15,40 @@
           <h2 class="h5 mb-4 color-light-1">
             Potrzebujesz pomocy?
           </h2>
-          <a href="" class="h3 color-light-1">
+          <a href="tel:222472020" class="h3 color-light-1">
             22 247 20 20
           </a>
           <p class="small color-light-3">
             Cały tydzień: 6.00 - 18.00
           </p>
-          <a href="" class="h4 color-accent-1">
+          <a href="mailto:info@bluutaxi.pl" class="h4 color-accent-1">
             info@bluutaxi.pl
           </a>
         </div>
         <div class="col-md-2">
           <h2 class="h5 color-light-1">
-            Usługi
+            Obszary
           </h2>
+          <ul class="footer-list">
+            <li>
+              <a href="#" title="Piaseczno">Piaseczno</a>
+            </li>
+            <li>
+              <a href="#" title="Zalesie Górne">Zalesie Górne</a>
+            </li>
+            <li>
+              <a href="#" title="Prażmów">Prażmów</a>
+            </li>
+            <li>
+              <a href="#" title="Góra Kalwaria">Góra Kalwaria</a>
+            </li>
+            <li>
+              <a href="#" title="Grójec">Grójec</a>
+            </li>
+            <li>
+              <a href="#" title="Tarczyn">Tarczyn</a>
+            </li>
+          </ul>
         </div>
         <div class="col-md-2">
           <h2 class="h5 color-light-1">
@@ -49,17 +69,17 @@
       <div class="col-md-8">
         <ul class="footer-bottom-menu">
           <li>
-            <a href="#" title="" class="small color-light-1">
+            <a href="/polityka-prywatnosci/" title="Polityka prywatności" class="small color-light-1">
               Polityka prywatności
             </a>
           </li>
           <li>
-            <a href="#" title="" class="small color-light-1">
+            <a href="/regulamin/" title="Regulamin" class="small color-light-1">
               Regulamin
             </a>
           </li>
           <li>
-            <a href="#" title="" class="small color-light-1">
+            <a href="/rodo/" title="RODO" class="small color-light-1">
               RODO
             </a>
           </li>
