--- a/src/includes/sections/hero.njk
+++ b/src/includes/sections/hero.njk
@@ -1,5 +1,5 @@
 <section class="bg-dark-3">
-<div class="pt-large pt-md-xlarge pb-xxsmall pb-md-small bg-squares rounded-bottom-xl">
+<div class="pt-large pt-md-xxlarge pb-xxsmall pb-md-medium hero rounded-bottom-xl">
   <div class="container">
     <div class="row">
     <div class="col-md-7 pb-xsmall pb-md-small">
@@ -26,12 +26,12 @@
       <p class="col-lg-10 mt-4 split-lines">
         Pobierz najnowszą aplikację mobilną ze swojego sklepu z aplikacjami – instaluj tylko aplikacje z oryginalnych sklepów.
       </p>
-      <div class="d-flex mt-4">
-        <a href="https://play.google.com/store/apps/details?id=com.taxity.bluutaxi" title="Pobierz z Google Play" class="button-app magnetic fade-in">
+      <div class="d-flex mt-3">
+        <a href="https://play.google.com/store/apps/details?id=com.taxity.bluutaxi" data-strength="60" title="Pobierz z Google Play" class="button-app magnetic fade-in">
             <img src="/assets/img/hero/googleplay.png" alt="">
         </a>
-        <a href="https://apps.apple.com/pl/app/bluu-taxi-piaseczno-pra%C5%BCm%C3%B3w/id6504847568?platform=iphone" title="Pobierz z Appstore" class="button-app magnetic fade-in">
-          <img src="/assets/img/hero/appstore.png" alt="">
+        <a href="https://apps.apple.com/pl/app/bluu-taxi-piaseczno-pra%C5%BCm%C3%B3w/id6504847568?platform=iphone" data-strength="60" title="Pobierz z Appstore" class="button-app magnetic fade-in">
+            <img src="/assets/img/hero/appstore.png" alt="">
         </a>
       </div>
     </div>
@@ -42,3 +42,18 @@
   </div>
 </div>
 </section>
+
+<style>
+  .hero {
+    background-image: url(/assets/img/prazmow.png);
+    background-size: cover;
+    background-color: #f7f7f7d1;
+    background-blend-mode: color-dodge;
+  }
+  .hero-svg {
+    padding: .5em .6em .2em;
+    width: max-content;
+    border-radius: 25px;
+    background: var(--color-light-2);
+  }
+</style>
