--- a/src/includes/sections/pricing.njk
+++ b/src/includes/sections/pricing.njk
@@ -1,5 +1,5 @@
-<section class="bg-dark-3">
-    <div class="pt-medium pb-small pb-md-medium rounded-xl bg-light-2">
+<section class="bg-dark-3" id="cennik">
+    <div class="pt-medium pb-small pb-md-medium rounded-xl bg-squares">
         <div class="container">
             <div class="row g-4">
                 <div class="col-md-6">
