--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: "layouts/front.njk"
 title: Zamów taxi
-description: 
+description: Oferujemy bezpieczne i tanie przewozy. Zatrudniamy wyłącznie doświadczonych i licencjonowanych kierowców.
 ---
 
 {% include 'sections/hero.njk' %}
